2004-03-01  Bert Driehuis <driehuis@playbeing.org>
	* src/icd.cc: include time.h for BSD 

2004-03-01 Scott Dattalo  <scott@dattalo.com>
	* modules/* - 
	Updated the (internal) modules to comply with the new gpsim interface standard
	* dozens of files:
	  -- removed all references to 'pic_id'
	  -- changed pic_processor references to Processor references
	
	
2004-02-29  Borut Razem  <borut.razem@siol.net>
	* src/eeprom.cc: initialization of variable eestate in EECON2::EECON2(void)
	by calling ee_reset()

2004-02-28  Borut Razem  <borut.razem@siol.net>
	* config_win32.h.in : strtoll defined as _strtoi64, removed definition
	of atoll, version number updated to 0.21.2
	* gui/gui.h, gui/gui_stopwatch.cc: prevent calling Update() from Update().
	The problem manifested on GTK+ 2.x on Linux and WIN32.
	* gui/gui_breadboard.cc, gui/gui_regwin.cc, gui/gui_src_asm.cc,
	gui/gui_src_opcode.cc: GTK+ 2.x port - use pango font handling
	* examples/14bit/pulse_measure.asm: variable upper renamed to _upper;
	upper is an assembler instruction operand in gpasm and mpasm

2004-02-28 Scott Dattalo  <scott@dattalo.com>
	* gui/gui_main.cc, gui/gui_menu.cc, gui/gui_processor.cc:
	Inhibit the half-baked gui_scope.
	
2004-02-27 Scott Dattalo  <scott@dattalo.com>
	* src/pic-processor.cc, src/interface.cc, src/interface.h, 
	src/init.cc, src/icd.cc, src/cod.cc, src/breakpoints.cc,
	gui/gui_main.cc, gpsim/main.cc, cli/input.h, cli/input.cc,
	cli/cmd_x.cc, cli/cmd_run.cc, cli/cmd_dump.h, cli/cmd_dump.cc:
	The gpsim library, which is the code comprised of everything
	in the src/ subdirectory, now has no dependencies on the gui
	or cli code base. This makes it possible to link against
	just libgpsim. 

2004-02-25 Scott Dattalo  <scott@dattalo.com>
	* gui/gui_stopwatch.cc, extras/rs232-gen/rs232-gen.c:
	changed all references of atoll to strtoll. bug 820326
	
2004-02-25 Hans-Juergen Dorn <hans.dorn@apl-landau.de>
	* src/16bit-registers.cc: gpsim was pushing onto